<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_read_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <include layout="@layout/layout_reader_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/v_60"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:background="@color/mask_color">

        <TextView
            android:id="@+id/directory"
            android:drawableTop="@mipmap/ic_menu_white"
            android:text="@string/directory"
            style="@style/reader_menu_btn" />

        <TextView
            android:id="@+id/night_mode"
            android:drawableTop="@mipmap/ic_mode_night"
            android:text="@string/night_mode"
            style="@style/reader_menu_btn" />

        <TextView
            android:id="@+id/cache"
            android:drawableTop="@mipmap/ic_down_white"
            android:text="@string/subscribe"
            style="@style/reader_menu_btn" />

        <TextView
            android:id="@+id/setting"
            android:drawableTop="@mipmap/ic_setup_white"
            android:text="@string/setting"
            style="@style/reader_menu_btn" />

    </LinearLayout>

</FrameLayout>